Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignBooleanTextObj.quorum
class Main
    action Main
        boolean v = Test()
    end

    action Test() returns boolean
        Text var
        var:SetValue("text")
        return var
    end
end